[project]
name = "ddump"
authors = [
    { name = "wukan", email = "wu-kan@163.com" },
]
description = "A data dump tool"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "ksrpc>=0.6.8",
    "loguru",
    "pandas",
    "pyarrow",
    "pymysql",
    "sqlalchemy>=1.4",
    "tenacity",
    "more_itertools",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "ddump/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["ddump"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["ddump*"]